# loader

./: .gitignore  CMakeLists.txt  Loader.cpp  Loader.h  config.json  main.cpp  requests.cpp  requests.h
.github/workflows/: build-generator.yaml
